# mizan-evals

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: retrieval-bm25.yaml  sample.yaml
data/corpus/: BUILD_META.json  README.md  arwiki.jsonl  manifest.yaml
data/retrieval/: README.md  eval_items.jsonl
data/samples/: README.md  eval_items.jsonl
runs/archive/20260703T030732Z-retrieval-bm25-arwiki/: metadata.json  results.json  retrieval.md
runs/archive/20260703T034326Z-retrieval-bm25-arwiki/: metadata.json  results.json  retrieval.md
scripts/: build_corpus.py
src/mizan/: __init__.py  cli.py  config.py  corpus.py  corpus_build.py  dataset.py  report.py  results.py  runner.py  schemas.py
src/mizan/llm/: __init__.py  base.py  client.py  factory.py  huggingface.py  mock.py  openai_compatible.py
src/mizan/retrieval/: __init__.py  bm25.py  factory.py  normalize.py
src/mizan/scoring/: __init__.py  retrieval.py  tool_calling.py
src/mizan/tools/: __init__.py  extract.py  normalize.py  registry.py  schema.py
tests/: test_bm25.py  test_cached_client.py  test_cli.py  test_config.py  test_corpus.py  test_corpus_build.py  test_dataset.py  test_factory.py  test_hf_backend.py  test_mock_backend.py  test_mock_tools.py  test_normalize.py  test_openai_backend.py  test_openai_tools.py  test_retrieval.py  test_retrieval_dataset.py  test_retrieval_eval.py  test_runner.py  test_schemas.py  test_tool_extract.py  test_tool_normalize.py  test_tool_runner.py  test_tool_scoring.py  test_tools_registry.py
