[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mizan-evals"
version = "0.1.0"
description = "Evaluation harness for Arabic RAG and agent tool-calling across English, MSA, and Gulf dialect"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sana Araj" }]
keywords = ["arabic-nlp", "rag", "llm-evaluation", "agents"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
mizan = "mizan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mizan"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
